[Neovim] Fix hydra config.

--- a/templates/nvim/lua/user_hydra.lua.j2
+++ b/templates/nvim/lua/user_hydra.lua.j2
@@ -120,7 +120,7 @@ Hydra({
       },
    },
    mode = {'n', 't'},
-   body = {'<C-w>', '<leader>w'},
+   body = '<C-w>',
    heads = {
       { 'h', function() splits.move_cursor_left() end },
       { 'j', function() splits.move_cursor_down() end },
