[Neovim] Use FZF-LSP defaults.

--- a/templates/nvim/lua/user_languages.lua.j2
+++ b/templates/nvim/lua/user_languages.lua.j2
@@ -1,3 +1,6 @@
+-- FZF/LSP Settings
+require'fzf_lsp'.setup()
+
 -- DAP Settings
 {{ dap_plugin_settings_file or "-- No DAP Languages Configured" }}
 
