--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -87,16 +87,8 @@ vim.g.indent_blankline_filetype_exclude = { 'help', 'packer' }
 vim.g.indent_blankline_buftype_exclude = { 'terminal', 'nofile' }
 vim.g.indent_blankline_show_trailing_blankline_indent = false
 
--- Gitsigns
-require('gitsigns').setup {
-  signs = {
-    add = { text = '+' },
-    change = { text = '~' },
-    delete = { text = '_' },
-    topdelete = { text = '‾' },
-    changedelete = { text = '~' },
-  },
-}
+-- Git Setup
+require('user_git')
 
 -- Telescope
 require('user_telescope')
@@ -106,9 +98,6 @@ require('user_completion')
 
 -- LuaSnip setup
 require('user_snippet')
-
--- LSP settings
-require('user_lsp')
 
 -- DAP settings
 require('user_dap')
@@ -157,6 +146,9 @@ require('user_window')
 
 -- Hydra
 require('user_hydra')
+
+-- LSP settings
+require('user_lsp')
 
 -- Main Keymaps
 require('user_keymaps')
