[Neovim] Misc fixes.

--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -5,7 +5,7 @@ vim.g.maplocalleader = ' '
 
 -- Which-Key Config
 require("which-key").setup({
-  triggers = {"<leader>"},
+  triggers = {"<leader>", "g"},
   triggers_blacklist = {
     n = { "<C-w>", "<C-g>" },
     v = { "<C-w>", "<C-g>" },
