--- a/templates/nvim/lua/user_notes.lua.j2
+++ b/templates/nvim/lua/user_notes.lua.j2
@@ -33,3 +33,8 @@ require('neorg').setup {
       -- },
   },
 }
+
+-- Glow Settings
+vim.g.glow_binary_path = "{{ nix_bin }}"
+vim.g.glow_border = "rounded"
+vim.g.glow_use_pager = true
