--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -121,7 +121,7 @@ require('user_fm')
 require('user_terminal')
 
 -- Neorg Settings
-require('user_neorg')
+require('user_notes')
 vim.g.glow_binary_path = "{{ nix_bin }}"
 vim.g.glow_border = "rounded"
 vim.g.glow_use_pager = true
