[Neovim] Update projectconfig settings.

--- a/templates/nvim/lua/user_project.lua.j2
+++ b/templates/nvim/lua/user_project.lua.j2
@@ -16,6 +16,7 @@ require'telescope'.load_extension('zoxide')
 
 -- Project Config Settings
 require('nvim-projectconfig').setup({
-  -- project_dir = "{{ nvim_projects_dir }}/",
-  autocmd = true
+  project_dir = "{{ nvim_projects_dir }}/",
+  autocmd = true,
+  silent = false,
 })
