--- a/templates/nvim/lua/user_telescope.lua.j2
+++ b/templates/nvim/lua/user_telescope.lua.j2
@@ -74,6 +74,11 @@ easypick.setup({
 			command = "git diff --name-only --diff-filter=U --relative",
 			previewer = easypick.previewers.file_diff()
 		},
+		{
+			name = "justfile_runner",
+			command = "{{ nix_bin }}/just --list",
+			previewer = easypick.previewers.default()
+		},
     {{ telescope_picker_config_file or "-- No Extra Telescope Picker Config" }}
 	}
 })
