[Neovim] Add query treesitter syntax.

--- a/templates/nvim/lua/user_treesitter.lua.j2
+++ b/templates/nvim/lua/user_treesitter.lua.j2
@@ -37,6 +37,7 @@ require('nvim-treesitter.configs').setup {
     "norg",
     "norg_meta",
     "norg_table",
+    "query",
     "yaml",
     {{ treesitter_parsers_file or "-- No Extra Treesitter Parsers Installed" }}
   },
