--- a/templates/zellij/config.kdl.j2
+++ b/templates/zellij/config.kdl.j2
@@ -190,7 +190,7 @@ plugins {
 // Default: $SHELL
 //
 // default_shell "fish"
-default_shell "{{ nvim_shell }}"
+default_shell "{{ zellij_shell }}"
 
 // Toggle between having pane frames around the panes
 // Options:
@@ -203,26 +203,40 @@ default_shell "{{ nvim_shell }}"
 // For more examples, see: https://github.com/zellij-org/zellij/tree/main/example/themes
 // Once these themes are defined, one of them should to be selected in the "theme" section of this file
 //
-// themes {
-//     dracula {
-//         fg 248 248 242
-//         bg 40 42 54
-//         red 255 85 85
-//         green 80 250 123
-//         yellow 241 250 140
-//         blue 98 114 164
-//         magenta 255 121 198
-//         orange 255 184 108
-//         cyan 139 233 253
-//         black 0 0 0
-//         white 255 255 255
-//     }
-// }
+themes {
+    dracula {
+        fg 248 248 242
+        bg 40 42 54
+        red 255 85 85
+        green 80 250 123
+        yellow 241 250 140
+        blue 98 114 164
+        magenta 255 121 198
+        orange 255 184 108
+        cyan 139 233 253
+        black 0 0 0
+        white 255 255 255
+    }
+    gruvbox-dark {
+        bg 40 40 40
+        red 204 36 29
+        green 152 151 26
+        yellow 215 153 33
+        blue 69 133 136
+        magenta 177 98 134
+        orange 214 93 14
+        fg 213 196 161
+        cyan 104 157 106
+        black 60 56 54
+        white 251 241 199
+    }
+}
 
 // Choose the theme that is specified in the themes section.
 // Default: default
 //
 // theme "default"
+theme gruvbox-dark
 
 // The name of the default layout to load on startup
 // Default: "default"
@@ -279,6 +293,7 @@ default_shell "{{ nvim_shell }}"
 // Default: $EDITOR or $VISUAL
 //
 // scrollback_editor "/usr/bin/vim"
+scrollback_editor "{{ nvim_exe }}"
 
 // When attaching to an existing session with other users,
 // should the session be mirrored (true)
@@ -290,7 +305,9 @@ default_shell "{{ nvim_shell }}"
 // The folder in which Zellij will look for layouts
 //
 // layout_dir "/path/to/my/layout_dir"
+layout_dir "{{ zellij_layout_dir }}"
 
 // The folder in which Zellij will look for themes
 //
 // theme_dir "/path/to/my/theme_dir"
+theme_dir "{{ zellij_themes_dir }}"
