[Zellij] Fix syntax.

--- a/templates/zellij/config.kdl.j2
+++ b/templates/zellij/config.kdl.j2
@@ -236,7 +236,7 @@ themes {
 // Default: default
 //
 // theme "default"
-theme gruvbox-dark
+theme "gruvbox-dark"
 
 // The name of the default layout to load on startup
 // Default: "default"
