--- a/templates/zellij/layouts-template/layout.kdl.j2
+++ b/templates/zellij/layouts-template/layout.kdl.j2
@@ -5,6 +5,16 @@ layout {
             plugin location="zellij:tab-bar"
         }
     }
+    default_tab_template {
+        // the default zellij tab-bar and status bar plugins
+        pane size=1 borderless=true {
+            plugin location="zellij:tab-bar"
+        }
+        children
+        pane size=2 borderless=true {
+            plugin location="zellij:status-bar"
+        }
+    }
     {{ zellij_kdl_layout_info | join('\n') }}
 }
 session_name "{{ zellij_kdl_session_name }}"
